# SpareFoodShare

./: .eslintrc.js  .gitignore  .gitlab-ci.yml  LICENSE  README.md  README.md.orig  Thing_to_do.docx  package-lock.json  package.json  requirements-dev.txt  requirements.txt  run.bat  setup.cfg  setup.py  setup_env.sh  ~$ing_to_do.docx
.github/: dependabot.yml
.github/workflows/: lint.yml  lintJS.yml  lintPy.yml
public/: index.html
src/: App.js  App.test.js  Welcome.css  Welcome.js  index.js  manage.py  send_email.py
src/jsx/: AuthContext.js  Layout.js  browse.js
src/jsx/Chats/: Chats.css  Chats.js  LiveChat.css  LiveChat.js
src/jsx/Listings/: Listings.js
src/jsx/MyItems/: MyItems.css  MyItems.js
src/jsx/MyOrders/: MyOrders.css  MyOrders.js
src/jsx/MyProfile/: MyProfile.css  MyProfile.js
src/jsx/MySales/: MySales.css  MySales.js
src/jsx/Personal Detail Page/: personaldetails.html
src/jsx/PersonalDetailPage/: Personaldetails.html
src/jsx/browse/: Browse.css  Browse.js
src/jsx/components/: Footer.css  Footer.js  InitialNotificationGenerator.js  NavBar.js  Navbar.css  Navbar.js  PersonalDetails.css  PersonalDetails.js  PersonalDetails_2.css  PersonalDetails_2.html  PrivateRouteAdmin.js  PrivateRouteBoth.js  PrivateRouteLogin.js  PrivateRouteProfile.js  ProfileFramework.css  Theme.css  (+8 more)
src/monolith/: settings.py  urls.py  views.py  wsgi.py
src/spare_food_share/: urls.py  wsgi.py
src/sparefood/: admin.py  apps.py  asgi.py  consumers.py  itemsSerializers.py  jwt_decoder.py  models.py  routing.py  serializers.py  tokens.py  urls.py  views.py
(+42 files in other folders)
