[metadata]
name = spare_food_share
description = SpareFoodShare web code for deployment to a docker container
author = 404N0tFound
license = MIT
license_files = LICENSE.md
platforms = unix, linux, win32, win64
version= 0.0.1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[flake8]
max-line-length = 120